add user update functionality and manage notifications better
